Fix flicker bug in STN player Move position of ads up move stn player to 3rd paragraph hide captions

--- a/themes/experience-engine/assets/styles/components/stn.css
+++ b/themes/experience-engine/assets/styles/components/stn.css
@@ -16,7 +16,8 @@
 
 }
 
-.s2nSmartPlayer[style] {
+.s2nSmartPlayer[style]:not(.s2nBelowViewport) {
+
 	height: unset !important;
 }
 
